[metadata]
name = dbrw
version = 0.1.5
author = Struan Clark
author_email = dbrw@to.scrk.net
description = DataBase Reader and Writer utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xtruan/dbrw
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    psycopg2
    pandas
python_requires = >=3.6
