[metadata]
name = dbrw
version = 0.1.13
author = Struan Clark
author_email = dbrw@to.scrk.net
description = DataBase Reader and Writer utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xtruan/dbrw
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    # psycopg2
    pandas
python_requires = >=3.6

[options.extras_require]
psycopg2 =
    psycopg2
psycopg2-binary =
    psycopg2-binary
